--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,12 +8,7 @@
           <nav>
             <ul class="reset" role="navigation">
               <li class="menu-item">
-                <a href="home-01.html">Home</a>
-                <ul class="sub-menu">
-                  <li><a href="home-01.html">Generic Home Page</a></li>
-                  <li><a href="home-02.html">App Showcase</a></li>
-                  <li><a href="home-03.html">App Showcase Alternative</a></li>
-                </ul>
+                <a href="{{ site.url }}/">Home</a>
               </li>
               <li class="menu-item">
                 <a href="works-4-columns.html">Works</a>
