--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -304,7 +304,7 @@
 				</section>
 
 				<section class="row section">
-					<div class="map" data-maplat="51.511214" data-maplon="-0.119824" data-mapzoom="15" data-color="" data-height="22.222" data-img="img/marker.png" data-info="I am based in London, UK"></div>
+					<div class="map" data-maplat="41.374774" data-maplon="-83.651323" data-mapzoom="15" data-color="" data-height="22.222" data-img="{{site_url}}/img/marker.png" data-info="I am based in Ohio"></div>
 				</section>
 
 			</div><!-- id-main -->
