Show most recent 6 posts on home page

--- a/_layouts/single-blog-post.html
+++ b/_layouts/single-blog-post.html
@@ -45,7 +45,7 @@
 
 					<div class="post-area clear-after">
 						<article role="main">
-							<h5 class="meta-post"><a href="#">Travels</a>, <a href="#">World</a> - {% if page.modified %}<time datetime="{{ page.modified | date: "%Y-%m-%dT%H:%M:%SZ" }}" itemprop="dateModified">{{ page.modified | date: "%B %d, %Y" }}</time>{% else %}<time datetime="{{ page.date | date: "%Y-%m-%dT%H:%M:%SZ" }}" itemprop="datePublished">{{ page.date | date: "%B %d, %Y" }}</time></p>{% endif %}</h5>
+							<h5 class="meta-post">{% if page.modified %}<time datetime="{{ page.modified | date: "%Y-%m-%dT%H:%M:%SZ" }}" itemprop="dateModified">{{ page.modified | date: "%B %d, %Y" }}</time>{% else %}<time datetime="{{ page.date | date: "%Y-%m-%dT%H:%M:%SZ" }}" itemprop="datePublished">{{ page.date | date: "%B %d, %Y" }}</time></p>{% endif %}</h5>
 							<h1>{{page.title }}</h1>
 							{{ content }}
 						</article>
