--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
       <div class="row">
         <div class="nav-inner row-content buffer-left buffer-right even clear-after">
           <div id="brand">
-            <h1 class="reset"><!--<img src="img/logo.png" alt="logo">--><a href="/">{{ site.title }}</a></h1>
+            <h1 class="reset"><!--<img src="img/logo.png" alt="logo">--><a href="{{ site.url }}/">{{ site.title }}</a></h1>
           </div><!-- brand -->
           <a id="menu-toggle" href="#"><i class="fa fa-bars fa-lg"></i></a>
           <nav>
