--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -113,76 +113,22 @@
 					<div class="row-content buffer even clear-after">
 						<div class="section-title"><h3>Latest News</h3></div>
 						<div class="grid-items blog-section masonry-style preload">
-							<article class="item column six">
-								<a href="#">
-									<figure><img src="http://placehold.it/800x600/ddd/fff&text=Beetle%20image" alt=""><span class="blog-overlay"><i class="icon icon-doc"></i></span></figure>
-									<div class="blog-excerpt">
-										<div class="blog-excerpt-inner">
-											<h5 class="meta-post">Interior design</h5>
-											<h2>A confortable desk</h2>
-										</div><!-- blog-excerpt -->
-									</div><!-- blog-excerpt-inner -->
-								</a>
-							</article>
-							<article class="item column three">
-								<a href="#">
-									<figure><img src="http://placehold.it/800x600/ddd/fff&text=Beetle%20image" alt=""><span class="blog-overlay"><i class="icon icon-doc"></i></span></figure>
-									<div class="blog-excerpt">
-										<div class="blog-excerpt-inner">
-											<h5 class="meta-post">Relax, Hobbies</h5>
-											<h2>How I spend my time</h2>
-											<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-										</div><!-- blog-excerpt-inner -->
-									</div><!-- blog-excerpt -->
-								</a>
-							</article>
-							<article class="item column three">
-								<a href="#">
-									<figure><img src="http://placehold.it/800x600/ddd/fff&text=Beetle%20image" alt=""><span class="blog-overlay"><i class="icon icon-doc"></i></span></figure>
-									<div class="blog-excerpt">
-										<div class="blog-excerpt-inner">
-											<h5 class="meta-post">Holidays</h5>
-											<h2>Snow &amp; silence</h2>
-											<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-										</div><!-- blog-excerpt -->
-									</div><!-- blog-excerpt-inner -->
-								</a>
-							</article>
-							<article class="item column three">
-								<a href="#">
-									<figure><img src="http://placehold.it/800x600/ddd/fff&text=Beetle%20image" alt=""><span class="blog-overlay"><i class="icon icon-doc"></i></span></figure>
-									<div class="blog-excerpt">
-										<div class="blog-excerpt-inner">
-											<h5 class="meta-post">Music, Headphones</h5>
-											<h2>5 Hi-Fi headphones</h2>
-											<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-										</div><!-- blog-excerpt -->
-									</div><!-- blog-excerpt-inner -->
-								</a>
-							</article>
-							<article class="item column three">
-								<a href="#">
-									<figure><img src="http://placehold.it/800x600/ddd/fff&text=Beetle%20image" alt=""><span class="blog-overlay"><i class="icon icon-doc"></i></span></figure>
-									<div class="blog-excerpt">
-										<div class="blog-excerpt-inner">
-											<h5 class="meta-post">Web Design</h5>
-											<h2>Build awesome layouts</h2>
-											<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-										</div><!-- blog-excerpt -->
-									</div><!-- blog-excerpt-inner -->
-								</a>
-							</article>
-							<article class="item column six">
-								<a href="#">
-									<figure><img src="http://placehold.it/800x600/ddd/fff&text=Beetle%20image" alt=""><span class="blog-overlay"><i class="icon icon-doc"></i></span></figure>
-									<div class="blog-excerpt">
-										<div class="blog-excerpt-inner">
-											<h5 class="meta-post">Photography, Instagram</h5>
-											<h2>We are all made of stars</h2>
-										</div><!-- blog-excerpt -->
-									</div><!-- blog-excerpt-inner -->
-								</a>
-							</article>
+
+							{% for post in site.posts limit:1 %}
+								{% include post-item-big.html %}
+							{% endfor %}
+
+							{% for post in site.posts offset:1 limit:2 %}
+								{% include post-item-small.html %}
+							{% endfor %}
+
+							{% for post in site.posts offset:3 limit:1 %}
+								{% include post-item-big.html %}
+							{% endfor %}
+
+							{% for post in site.posts offset:4 limit:2 %}
+								{% include post-item-small.html %}
+							{% endfor %}
 							<div class="shuffle-sizer three"></div>
 						</div><!-- grid-items -->
 						<div class="more-btn"><a class="button transparent aqua" href="#">Read all News</a></div>
