--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,26 +5,12 @@
         <div class="widget column three"><!-- la class="widget" è forse generata utomaticamente da wp -->
           <h4>Menu</h4>
           <ul class="plain">
-            <li><a href="home-01.html">Home</a></li>
+            <li><a href="{{site_url}}/">Home</a></li>
             <li><a href="works-3-columns.html">Portfolio</a></li>
             <li><a href="blog-4-columns-masonry.html">Blog</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="file:///Users/pasqualevitiello/My%20Folder/Job/Envato/PR%20Themeforest/Flattie/Markup/Beetle/contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
-        </div>
-        <div class="widget column three">
-          <h4>Archives</h4>
-          <ul class="plain">
-            <li><a href="#">March 2014</a></li>
-            <li><a href="#">April 2014</a></li>
-            <li><a href="#">May 2014</a></li>
-            <li><a href="#">June 2014</a></li>
-            <li><a href="#">July 2014</a></li>
-          </ul>
-        </div>
-        <div class="widget column three">
-          <h4>Widget</h4>
-          <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
         </div>
         <div class="widget meta-social column three">
           <h4>Connect</h4>
