--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -250,7 +250,7 @@
 				</section>
 
 				<section class="row section">
-					<div class="map" data-maplat="41.374774" data-maplon="-83.651323" data-mapzoom="15" data-color="" data-height="22.222" data-img="{{site_url}}/img/marker.png" data-info="I am based in Ohio"></div>
+					<div class="map" data-maplat="41.374774" data-maplon="-83.651323" data-mapzoom="7" data-color="" data-height="22.222" data-img="{{site_url}}/img/marker.png" data-info="&hearts; from Ohio"></div>
 				</section>
 
 			</div><!-- id-main -->
