--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
             <li><a href="works-3-columns.html">Portfolio</a></li>
             <li><a href="blog-4-columns-masonry.html">Blog</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="{{site_url}}/contact">Contact</a></li>
           </ul>
         </div>
         <div class="widget meta-social column three">
