--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,13 +22,7 @@
                 </ul>
               </li>
               <li class="menu-item">
-                <a href="blog-4-columns-masonry.html">Blog</a>
-                <ul class="sub-menu">
-                  <li><a href="blog-4-columns-masonry.html">Four Columns Grid</a></li>
-                  <li><a href="blog-list-sidebar.html">List Style with Sidebar</a></li>
-                  <li><a href="single-blog-post.html">Single Post</a></li>
-                  <li><a href="single-blog-post-sidebar.html">Single Post with Sidebar</a></li>
-                </ul>
+                <a href="{{site_url}}/blog">Blog</a>
               </li>
               <li class="menu-item"><a href="resume.html">Resume</a></li>
               <li class="menu-item">
@@ -47,7 +41,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="menu-item"><a href="contact.html">Contact</a></li>
+              <li class="menu-item"><a href="{{site_url}}/contact">Contact</a></li>
             </ul>
           </nav>
         </div><!-- row-content -->
