--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,7 +111,7 @@
 
 				<section class="row section">
 					<div class="row-content buffer even clear-after">
-						<div class="section-title"><h3>Latest News</h3></div>
+						<div class="section-title"><h3>Latest Posts</h3></div>
 						<div class="grid-items blog-section masonry-style preload">
 
 							{% for post in site.posts limit:1 %}
@@ -131,7 +131,7 @@
 							{% endfor %}
 							<div class="shuffle-sizer three"></div>
 						</div><!-- grid-items -->
-						<div class="more-btn"><a class="button transparent aqua" href="#">Read all News</a></div>
+						<div class="more-btn"><a class="button transparent aqua" href="{{site_url}}/blog">See all Posts</a></div>
 					</div>
 				</section>
 
