--- a/_layouts/blog-list.html
+++ b/_layouts/blog-list.html
@@ -10,10 +10,10 @@
     <main role="main">
       <div id="intro-wrap"  data-height="22.222">
         <div id="intro" class="preload darken">
-          <div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
+          <div class="intro-item" style="background-image: url({{site_url}}/img/computer.jpg);">
             <div class="caption">
-              <h2>Stories I Tell</h2>
-              <p>The universe is made of stories, not of atoms.</p>
+              <h2>My Blog</h2>
+              <p><em>Figuring it out and sharing what I find along the way.</em></p>
             </div><!-- caption -->
           </div><!-- intro -->
         </div><!-- intro -->
