--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,7 @@
           <h4>Menu</h4>
           <ul class="plain">
             <li><a href="{{site_url}}/">Home</a></li>
-            <li><a href="works-3-columns.html">Portfolio</a></li>
-            <li><a href="blog-4-columns-masonry.html">Blog</a></li>
+            <li><a href="{{site_url}}/blog">Blog</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="{{site_url}}/contact">Contact</a></li>
           </ul>
