--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,37 +11,14 @@
                 <a href="{{ site.url }}/">Home</a>
               </li>
               <li class="menu-item">
-                <a href="works-4-columns.html">Works</a>
-                <ul class="sub-menu">
-                  <li><a href="works-4-columns.html">Four Columns Grid Style</a></li>
-                  <li><a href="works-3-columns.html">Three Columns Grid Style</a></li>
-                  <li><a href="works-4-columns-alternative.html">Four Columns Mosaic Style</a></li>
-                  <li><a href="works-3-columns-alternative.html">Three Columns Mosaic Style</a></li>
-                  <li><a href="works-4-columns-lightbox.html">Lightbox Gallery</a></li>
-                  <li><a href="single-work-post.html">Single Work Page</a></li>
-                </ul>
-              </li>
-              <li class="menu-item">
                 <a href="{{site_url}}/blog">Blog</a>
               </li>
-              <li class="menu-item"><a href="resume.html">Resume</a></li>
               <li class="menu-item">
-                <a href="#">Features</a>
-                <ul class="sub-menu">
-                  <li><a href="search.html">Search Page</a></li>
-                  <li><a href="no-results.html">Search Page - No Results</a></li>
-                  <li><a href="page-not-found.html">404 - Page Not Found</a></li>
-                  <li>
-                    <a href="#">Sub Menu</a>
-                    <ul class="sub-menu">
-                      <li><a href="#">Sub Sub Menu 01</a></li>
-                      <li><a href="#">Sub Sub Menu 02</a></li>
-                      <li><a href="#">Sub Sub Menu 03</a></li>
-                    </ul>
-                  </li>
-                </ul>
+                <a href="resume.html">Resume</a>
               </li>
-              <li class="menu-item"><a href="{{site_url}}/contact">Contact</a></li>
+              <li class="menu-item">
+                <a href="{{site_url}}/contact">Contact</a>
+              </li>
             </ul>
           </nav>
         </div><!-- row-content -->
