--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="row-content buffer clear-after">
       <section id="top-footer">
-        <div class="widget column three"><!-- la class="widget" è forse generata utomaticamente da wp -->
+        <div class="widget column three">
           <h4>Menu</h4>
           <ul class="plain">
             <li><a href="{{site_url}}/">Home</a></li>
             <li><a href="{{site_url}}/blog">Blog</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="{{site_url}}/resume">Resume</a></li>
             <li><a href="{{site_url}}/contact">Contact</a></li>
           </ul>
         </div>
