--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,7 +14,7 @@
                 <a href="{{site_url}}/blog">Blog</a>
               </li>
               <li class="menu-item">
-                <a href="resume.html">Resume</a>
+                <a href="{{site_url}}/resume">Resume</a>
               </li>
               <li class="menu-item">
                 <a href="{{site_url}}/contact">Contact</a>
