Single post page done

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,8 @@
     <div class="row-content buffer clear-after">
       <section id="top-footer">
         <div class="widget column three">
+        </div>
+        <div class="widget column three">
           <h4>Menu</h4>
           <ul class="plain">
             <li><a href="{{site_url}}/">Home</a></li>
