Clean up home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,105 +9,17 @@
 
 		<main role="main">
 			<div id="intro-wrap">
-				<div id="intro" class="preload darken" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fadeUp">
-					<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-						<div class="caption">
-							<h2>Beetle</h2>
-							<p>HTML5 template for landing page, blog and resume</p>
-							<a class="button white transparent" href="#">Read More</a>
-						</div><!-- caption -->
-						<div class="photocaption">
-							<h4>Shot by <a href="http://dribbble.com/JustinMezzell">Justin Mezzell</a></h4>
-						</div><!-- photocaption -->
-					</div>
-					<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-						<div class="caption">
-							<h2>Lab desk</h2>
-							<p>Tools are all we need for creating good stuff</p>
-							<a class="button white transparent" href="#">Read More</a>
-						</div><!-- caption -->
-						<div class="photocaption">
-							<h4>A shot by <a href="http://madebyvadim.com/">Vadim Sherbakov</a></h4>
-						</div><!-- photocaption -->
-					</div>
-					<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-						<div class="caption">
-							<h2>Jules &amp; Jim</h2>
-							<p>A team with over 20 years of realty experience</p>
-							<a class="button white transparent" href="#">Read More</a>
-						</div><!-- caption -->
-						<div class="photocaption">
-							<h4>Shot by <a href="http://dribbble.com/JustinMezzell">Justin Mezzell</a></h4>
-						</div><!-- photocaption -->
-					</div>
-					<div class="intro-item" style="background-image: url(http://placehold.it/1800x600/ddd/fff&text=Beetle%20image);">
-						<div class="caption">
-							<h2>Workspace</h2>
-							<p>We love to work inside dark rooms</p>
-							<a class="button white transparent" href="#">Read More</a>
-						</div><!-- caption -->
-						<div class="photocaption">
-							<h4>Shot by <a href="http://dribbble.com/shots/883285-my-workspace">Eddie Lobanovskiy</a></h4>
-						</div><!-- photocaption -->
-					</div>
-				</div><!-- intro -->
-			</div><!-- intro-wrap -->
+	        <div id="intro" class="preload darken more-button">
+	          <div class="intro-item" style="background-image: url({{site_url}}/img/rails.jpg);">
+	            <div class="caption">
+	              <h2>Zac Clay</h2>
+	              <p><em>Full Stack Rails Engineer</em></p>
+	            </div><!-- caption -->
+	          </div>
+	        </div><!-- intro -->
+	      </div><!-- intro-wrap -->
 
 			<div id="main">
-
-				<section class="row section call-to-action">
-					<div class="row-content buffer even">
-						<p>{{ content }}</p>
-						<a class="button red" href="#">Buy it now!</a>
-					</div>
-				</section>
-
-				<section class="row section">
-					<div class="row-content buffer even clear-after">
-						<div class="column four">
-							<div class="small-icon red"><i class="icon icon-paperfly"></i></div>
-							<div class="small-icon-text clear-after">
-								<h4>Landing page</h4>
-								<p class="text-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							</div>
-						</div>
-						<div class="column four">
-							<div class="small-icon red"><i class="icon icon-diamond"></i></div>
-							<div class="small-icon-text clear-after">
-								<h4>Portfolio</h4>
-								<p class="text-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							</div>
-						</div>
-						<div class="column four last">
-							<div class="small-icon red"><i class="icon icon-crown"></i></div>
-							<div class="small-icon-text clear-after">
-								<h4>Resume</h4>
-								<p class="text-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							</div>
-						</div>
-						<div class="column four">
-							<div class="small-icon red"><i class="icon icon-tablet"></i></div>
-							<div class="small-icon-text clear-after">
-								<h4>Responsive</h4>
-								<p class="text-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							</div>
-						</div>
-						<div class="column four">
-							<div class="small-icon red"><i class="icon icon-megaphone"></i></div>
-							<div class="small-icon-text clear-after">
-								<h4>Blog</h4>
-								<p class="text-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							</div>
-						</div>
-						<div class="column four last">
-							<div class="small-icon red"><i class="icon icon-multiview"></i></div>
-							<div class="small-icon-text clear-after">
-								<h4>Layer CSS</h4>
-								<p class="text-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							</div>
-						</div>
-					</div>
-				</section>
 
 				<section class="row section">
 					<div class="row-content buffer even clear-after">
@@ -135,117 +47,10 @@
 					</div>
 				</section>
 
-				<section class="row section text-light" style="background-color:#cec8bc">
-					<div class="row-content buffer even clear-after">
-						<div class="column six push-six last-special">
-							<h2>OneChat Design</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-							<p><em>- Courtesy of <a href="http://stockapps.net/" target="_blank">Stockapps</a>.</em></p>
-							<a class="button transparent white" href="http://stockapps.net/">Explore</a>
-						</div>
-						<div class="side-mockup left-mockup animation">
-							<div class="slider iphone-slider white" data-autoplay="3000">
-								<figure>
-									<div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-									<div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-									<div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-									<div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-									<div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-									<div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-								</figure>
-							</div>
-						</div>
-					</div>
-				</section>
-
-				<section class="row section">
-					<div class="row-content buffer even clear-after">
-						<div class="section-title"><h3>Skills</h3></div>
-						<p class="centertxt">I’m an experienced and passionate user interface designer with interaction design background.<br>My goal is to make the world wide web a better place by designing beautiful user experiences, one site at a time.</p>
-						<div class="chart" data-percent="73" data-bar-color="#fd685b" data-animate="2000">
-							<div class="chart-content">
-								<div class="percent"></div>
-								<div class="chart-title">User Interface</div>
-							</div><!-- chart-content -->
-						</div><!-- chart -->
-						<div class="chart" data-percent="85" data-bar-color="#ffce54" data-animate="2500">
-							<div class="chart-content">
-								<div class="percent"></div>
-								<div class="chart-title">Front-end</div>
-							</div><!-- chart-content -->
-						</div><!-- chart -->
-						<div class="chart" data-percent="70" data-bar-color="#a0d468" data-animate="3000">
-							<div class="chart-content">
-								<div class="percent"></div>
-								<div class="chart-title">User Experience</div>
-							</div><!-- chart-content -->
-						</div><!-- chart -->
-						<div class="chart" data-percent="95" data-bar-color="#ac92ec" data-animate="3500">
-							<div class="chart-content">
-								<div class="percent"></div>
-								<div class="chart-title">Icon Design</div>
-							</div><!-- chart-content -->
-						</div><!-- chart -->
-					</div>
-				</section>
-
-				<section class="row section text-light" style="background-color:#4FC1E9;">
-					<div class="row-content buffer even clear-after">
-						<div class="testimonial-slider centertxt" data-autoplay="5000" data-pagination="true" data-transition="fade" data-autoheight="false">
-							<div class="quote">
-								<p>"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout."</p>
-								<div class="author">John Lennon</div>
-							</div><!-- quote -->
-							<div class="quote">
-								<p>"Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum'.."</p>
-								<div class="author">Fabrizio De Andr&egrave;</div>
-							</div><!-- quote -->
-							<div class="quote">
-								<p>"There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration."</p>
-								<div class="author">B.B. King</div>
-							</div><!-- quote -->
-						</div><!-- testimonial-slider -->
-					</div>
-				</section>
-
-				<section class="row section">
-					<div class="row-content buffer even clear-after">
-						<div class="column three">
-							<div class="count-item">
-								<div class="small-icon red"><i class="icon icon-leaf"></i></div>
-								<div class="count-number" data-from="0" data-to="1284" data-speed="1000" data-refresh-interval="25"></div>
-								<div class="count-subject">Active projects</div>
-							</div><!-- count-item -->
-						</div>
-						<div class="column three">
-							<div class="count-item">
-								<div class="small-icon red"><i class="icon icon-heart"></i></div>
-								<div class="count-number" data-from="0" data-to="28903" data-speed="1500" data-refresh-interval="25"></div>
-								<div class="count-subject">Users who love them</div>
-							</div><!-- count-item -->
-						</div>
-						<div class="column three">
-							<div class="count-item">
-								<div class="small-icon red"><i class="icon icon-tshirt"></i></div>
-								<div class="count-number" data-from="0" data-to="326" data-speed="2000" data-refresh-interval="25"></div>
-								<div class="count-subject">T-Shirts &amp; Gadgets</div>
-							</div><!-- count-item -->
-						</div>
-						<div class="column three last">
-							<div class="count-item">
-								<div class="small-icon red"><i class="icon icon-graph"></i></div>
-								<div class="count-number" data-from="0" data-to="58802" data-speed="2500" data-refresh-interval="25"></div>
-								<div class="count-subject">Everyday visitors</div>
-							</div><!-- count-item -->
-						</div>
-					</div>
-				</section>
-
 				<section class="row section call-to-action">
 					<div class="row-content buffer even animation">
-						<p>Have you fallen in love with Beetle?</p>
-						<a class="button red" href="#">Buy it now!</a>
+						<p>Want to get in touch with me?</p>
+						<a class="button red" href="{{site_url}}/contact">Contact</a>
 					</div>
 				</section>
 
