--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
         </div>
       </section><!-- top-footer -->
       <section id="bottom-footer">
-        <p class="keep-left">{{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a>. All Rights Reserved.</p>
+        <p class="centertxt">{{ site.time | date: '%Y' }} <a href="{{ site.url }}">{{ site.title }}</a> powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a>. All Rights Reserved.</p>
         <p class="keep-right"></p>
       </section><!-- bottom-footer -->
     </div><!-- row-content -->
