--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -12,7 +12,7 @@
         <div id="intro" class="preload darken more-button">
           <div class="intro-item" style="background-image: url({{site_url}}/img/old_computer.jpg);">
             <div class="caption">
-              <h2>Full Stack Rails Developer</h2>
+              <h2>Full Stack Rails Engineer</h2>
             </div><!-- caption -->
           </div>
         </div><!-- intro -->
