--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,10 +4,8 @@
   <meta name="description" content="The Page Description">
   <style type="text/css">@-ms-viewport{width: device-width;}</style>
   <title>{% if page.title %}{{ page.title }} • {% endif %}{{ site.title }}</title>
-  <link rel="stylesheet" href="{{site_url}}/css/layers.min.css" media="screen">
-  <link rel="stylesheet" href="{{site_url}}/css/pygments.css.scss" media="screen">
+  <link rel="stylesheet" href="{{site_url}}/css/main.css" media="screen">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" media="screen">
-  <link rel="stylesheet" href="{{site_url}}/css/style.css" media="screen">
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
