--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
 	          <div class="intro-item" style="background-image: url({{site_url}}/img/rails.jpg);">
 	            <div class="caption">
 	              <h2>Zac Clay</h2>
-	              <p><em>Full Stack Rails Engineer</em></p>
+	              <p><em>Web Developer</em></p>
 	            </div><!-- caption -->
 	          </div>
 	        </div><!-- intro -->
