--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="The Page Description">
+  <meta name="description" content="Zac Clay">
   <style type="text/css">@-ms-viewport{width: device-width;}</style>
   <title>{% if page.title %}{{ page.title }} • {% endif %}{{ site.title }}</title>
   <link rel="stylesheet" href="{{site_url}}/css/main.css" media="screen">
