--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -29,6 +29,18 @@
             </div><!-- timeline-label -->
             <div class="timeline column six last">
               <div class="year">
+                <time datetime="2018">2018</time>
+                <div class="experience">
+                  <span class="circle"></span>
+                  <div class="experience-img"><img src="{{site_url}}/img/red-guava.png" alt=""></div>
+                  <div class="experience-info clear-after">
+                    <h5>Red Guava</h5>
+                    <div class="role">Web Developer</div>
+                    <p>September 2018 – Current</p>
+                  </div><!-- experience-info -->
+                </div><!-- experience -->
+              </div><!-- year -->
+              <div class="year">
                 <time datetime="2015">2015</time>
                 <div class="experience">
                   <span class="circle"></span>
@@ -36,7 +48,7 @@
                   <div class="experience-info clear-after">
                     <h5>Chargify</h5>
                     <div class="role">Operations Engineer</div>
-                    <p>October 2015 – Current</p>
+                    <p>October 2015 – September 2018</p>
                   </div><!-- experience-info -->
                 </div><!-- experience -->
               </div><!-- year -->
